# Numericals

./: .gitignore  ;  CMakeLists.txt  run_all_tests.sh
include/: MatrixDecomposer.h  MatrixSolver.h  PivotingStrategy.h  PolynomialSolver.h  matrix.h  numerical_types.h  numericals.h  utils.h  vector.h
src/: CMakeLists.txt  MatrixDecomposer.cpp  MatrixSolver.cpp  PolynomialSolver.cpp  numericals.cpp
tests/: CMakeLists.txt  matrix_tests.cpp  numericals_tests.cpp  polynomial_tests.cpp  utils_tests.cpp  vector_tests.cpp
